# End-to-End-ML-Project-with-Deployment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
data/: Car_Insurance_Claim.csv  reference_dataset.csv  target_dataset.csv
ml_model_monitoring/dataset_ops/: __init__.py  data_processing.py  dataset_io.py
ml_model_monitoring/model_deployment/: api.py
ml_model_monitoring/monitoring/: __init__.py  monitoring.py
ml_model_monitoring/training/: __init__.py  train_script.py
ml_model_monitoring/utils/: __init__.py  check_utils.py  data_utils.py  logger_utils.py
