[tool.poetry]
name = "end-to-end-ml-project-with-deployment"
version = "0.4.0"
description = ""
authors = ["Selvinaz Beyza Eryilmaz <beyza.erylmaz067@gmail.com>"]
readme = "README.md"
packages = [{include = "end_to_end_ml_project_with_deployment", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
evidently = "^0.4.4"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
